Fix axe errors, alignment issues and test coverage

--- a/src/ids-radio/ids-radio.scss
+++ b/src/ids-radio/ids-radio.scss
@@ -1,7 +1,7 @@
 @import '../ids-base/ids-base';
 
 .ids-radio {
-  @include mb-2();
+  @include my-8();
   @include outline-none();
 
   label {
