--- a/src/ids-switch/ids-switch.scss
+++ b/src/ids-switch/ids-switch.scss
@@ -1,7 +1,7 @@
 @import '../ids-base/ids-base';
 
 .ids-switch {
-  @include mb-4();
+  @include mb-8();
 
   label {
     @include cursor-pointer();
